<resources>
    <string name="app_name">Progress</string>
    <string name="main_subtext">Дамуды баста!</string>

    <string name="login">Почта</string>
    <string name="password">Құпия сөз</string>

    <string name="hasNotAccount">Сізде аккаунт жоқ па?</string>
    <string name="register">Тіркелу</string>
    <string name="hasAccount">Сізде аккаунт бар ма?</string>
    <string name="signIn">Кіру</string>


    <string name="menu_home">Үй</string>
    <string name="menu_dhikr">Counter</string>
    <string name="menu_chat">Чат</string>
    <string name="menu_settings">Баптаулар</string>
</resources>