<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cnb_unselectedColor="#666666">

    <item
        android:id="@+id/item_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home"
        app:cnb_iconColor="@color/item_home"
        />

    <item
        android:id="@+id/item_chat"
        android:title="@string/menu_chat"
        android:icon="@drawable/ic_chat2"
        app:cnb_iconColor="@color/item_chat"
        />

    <item
        android:id="@+id/item_counter"
        android:title="@string/menu_dhikr"
        android:icon="@drawable/ic_count"
        app:cnb_iconColor="@color/item_counter"
        />

    <item
        android:id="@+id/item_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_gear"
        app:cnb_iconColor="@color/item_settings"/>


</menu>