<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorStatusBar"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tv_app_logo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#000"
            android:textSize="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/main_subtext"
            android:textSize="20dp" />



        <EditText
            android:id="@+id/et_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:hint="@string/login"
            android:background="#fff"
            android:ellipsize="start"
            android:fontFamily="@font/montserrat_light"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/montserrat_light"
            android:hint="@string/password"
            android:background="#fff"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/montserrat_medium"
            android:text="Кіру"
            android:textColor="#fff"
            android:textSize="20dp"
            android:theme="@style/ButtonStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/hasNotAccount"
            android:layout_gravity="center"
            android:layout_marginTop="160dp"
            android:textColor="#000"
            />

        <TextView
            android:id="@+id/tv_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/register"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#00DBEF"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>