<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_semibold"
            android:text="Регистрация"
            android:textColor="#000"
            android:textSize="40dp"
            tools:layout_editor_absoluteX="125dp"
            tools:layout_editor_absoluteY="134dp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="Атыңыз"
            android:ems="10"
            android:fontFamily="@font/montserrat_light"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_surname"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Фамилия"
            android:ems="10"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat_light"
            />

        <EditText
            android:id="@+id/et_reg_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat_light"
            android:inputType="textEmailAddress"
            android:ems="10"
            />

        <EditText
            android:id="@+id/et_reg_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:fontFamily="@font/montserrat_light"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:ems="10"
            />

        <Button
            android:id="@+id/button_register"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/montserrat_medium"
            android:text="Тіркелу"
            android:textColor="#fff"
            android:textSize="16dp"
            android:theme="@style/ButtonStyle"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/hasAccount"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textColor="#000"
            />

        <TextView
            android:id="@+id/tv_reg_page_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/signIn"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#00DBEF"
            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>